# stocks-playground

./: Dockerfile  LICENSE  Pipfile  README.md  Taskfile.yaml  dashboard.py  environment.yml  pyproject.toml  requirements.txt  setup.sh
