[tool.poetry]
name = "stocks-playground"
version = "2.0.0"
description = "Simply dashboard for comparing tickers"
authors = ["Dror Atariah <drorata@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stocks_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.1.2"
msgpack = "1.0.4"
requests = "2.28.1"
numpy = "1.23.2"
pandas = "1.4.3"
yfinance = "0.1.74"
pandas-datareader = "0.10.0"
streamlit = "1.12.0"
plotly = "5.10.0"
watchdog = "2.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
